- removed SCIPvarWasFixedAtIndex() and added SCIPgetVarWasFixedAtIndex()
- new function SCIPswapReals() to swap two real values
- new command line parameter -v to print detailed build options
- the CPLEX LPI now also compiles with CPLEX 12.7.0.0
- major update ot the Gurobi LPI, which supports ranged rows now and several performance improvements, but only works with Gurobi version >= 7.0.2

fixed bugs:
- correct handling of implicit integer variables with fractional solution value in simplerounding heuristic
- avoid numerically troublesome aggregations
- fixed bug in event system: bound change events of the new focus node must be processed, even if the bound
  is the same as at the last focus node
- fixed memory bug in SCIP_DIGRAPH
- fixed bug while changing the objective value of an original value after transforming the problem
- fixed bug with sorting of propagators in presolving: the order can be changed by calling probing; thus, there is a copy of the
  propagators, which is sorted by presolving priority
- avoid numerically unstable (multi-)aggregations
- added missing capturing and releasing mechanism in genvbounds propagator
- improved counting of memory consumption by using more block memory and counting all allocated memory
- fixed bug in XML reader concerning comments
- fixed wrong representation of SOC constraints in NLP
- fixed possible segmentation fault in genvbounds propagator
- fixed bug with solutions from previous runs not satisfying an objective limit
- the AMPL interface now writes a solve status (solve_result_num) into the .sol file
- fix wrong propagation of product expressions
- fix memory leaks in TSP example
- return SCIP_ERROR when a memory exception is caught in SoPlex (was SCIP_LPERROR)
- in the cmpres.awk (allcmpres.sh) output, the counts in the time column are now with respect to the
  whole set of processed instances (as with fail and solv), while before it was with respect to the